all the general uniforms

--- a/src/content/docs/reference/Uniforms/General/currentTime.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentTime.mdx
@@ -1,6 +1,6 @@
 ---
 title: currentTime
-description: The system time reported by the OS.
+description: The current system time reported by the OS.
 sidebar:
   label: currentTime
   order: 1
