--- a/src/content/docs/reference/Uniforms/General/currentYearTime.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentYearTime.mdx
@@ -1,6 +1,6 @@
 ---
 title: currentYearTime
-description: currentYearTime
+description: The current time since the beginning of the year and until the end of the year as reported by the OS.
 sidebar:
   label: currentYearTime
   order: 1
