--- a/src/content/docs/reference/Uniforms/General/darknessFactor.mdx
+++ b/src/content/docs/reference/Uniforms/General/darknessFactor.mdx
@@ -1,6 +1,6 @@
 ---
 title: darknessFactor
-description: darknessFactor
+description: The strength of the darkness effect from 0 to 1.
 sidebar:
   label: darknessFactor
   order: 1
