--- a/src/content/docs/reference/Uniforms/General/darknessLightFactor.mdx
+++ b/src/content/docs/reference/Uniforms/General/darknessLightFactor.mdx
@@ -1,6 +1,6 @@
 ---
 title: darknessLightFactor
-description: darknessLightFactor
+description: The current strength of the dimming effect from the darkness status effect.
 sidebar:
   label: darknessLightFactor
   order: 1
