--- a/src/content/docs/reference/Uniforms/General/eyeBrightness.mdx
+++ b/src/content/docs/reference/Uniforms/General/eyeBrightness.mdx
@@ -1,6 +1,6 @@
 ---
 title: eyeBrightness
-description: eyeBrightness
+description: The lightmap value at the player's location.
 sidebar:
   label: eyeBrightness
   order: 1
