--- a/src/content/docs/reference/Uniforms/General/eyeBrightnessSmooth.mdx
+++ b/src/content/docs/reference/Uniforms/General/eyeBrightnessSmooth.mdx
@@ -1,6 +1,6 @@
 ---
 title: eyeBrightnessSmooth
-description: eyeBrightnessSmooth
+description: The value of eyeBrightness, smoothed over time.
 sidebar:
   label: eyeBrightnessSmooth
   order: 1
