--- a/src/content/docs/reference/Uniforms/General/eyePosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/eyePosition.mdx
@@ -1,6 +1,6 @@
 ---
 title: eyePosition
-description: eyePosition
+description: The world space position of the player's head model.
 sidebar:
   label: eyePosition
   order: 1
