--- a/src/content/docs/reference/Uniforms/General/far.mdx
+++ b/src/content/docs/reference/Uniforms/General/far.mdx
@@ -1,6 +1,6 @@
 ---
 title: far
-description: far
+description: The current render distance in blocks. Not the far clipping plane distance!
 sidebar:
   label: far
   order: 1
