--- a/src/content/docs/reference/Uniforms/General/firstPersonCamera.mdx
+++ b/src/content/docs/reference/Uniforms/General/firstPersonCamera.mdx
@@ -1,6 +1,6 @@
 ---
 title: firstPersonCamera
-description: firstPersonCamera
+description: Whether the player is in first person mode.
 sidebar:
   label: firstPersonCamera
   order: 1
