--- a/src/content/docs/reference/Uniforms/General/fogColor.mdx
+++ b/src/content/docs/reference/Uniforms/General/fogColor.mdx
@@ -1,6 +1,6 @@
 ---
 title: fogColor
-description: fogColor
+description: The horizon fog color used by the vanilla game for sky rendering and fog.
 sidebar:
   label: fogColor
   order: 1
