--- a/src/content/docs/reference/Uniforms/General/fogDensity.mdx
+++ b/src/content/docs/reference/Uniforms/General/fogDensity.mdx
@@ -1,6 +1,6 @@
 ---
 title: fogDensity
-description: fogDensity
+description: The relative fog density used for vanilla fog, from 0 to 1.
 sidebar:
   label: fogDensity
   order: 1
