--- a/src/content/docs/reference/Uniforms/General/fogEnd.mdx
+++ b/src/content/docs/reference/Uniforms/General/fogEnd.mdx
@@ -1,6 +1,6 @@
 ---
 title: fogEnd
-description: fogEnd
+description: The ending distance in blocks used for vanilla fog.
 sidebar:
   label: fogEnd
   order: 1
