--- a/src/content/docs/reference/Uniforms/General/fogShape.mdx
+++ b/src/content/docs/reference/Uniforms/General/fogShape.mdx
@@ -1,6 +1,6 @@
 ---
 title: fogShape
-description: fogShape
+description: The fog shape used for vanilla fog.
 sidebar:
   label: fogShape
   order: 1
