--- a/src/content/docs/reference/Uniforms/General/fogStart.mdx
+++ b/src/content/docs/reference/Uniforms/General/fogStart.mdx
@@ -1,6 +1,6 @@
 ---
 title: fogStart
-description: fogStart
+description: The starting distance in blocks used for vanilla fog.
 sidebar:
   label: fogStart
   order: 1
