--- a/src/content/docs/reference/Uniforms/General/frameCounter.mdx
+++ b/src/content/docs/reference/Uniforms/General/frameCounter.mdx
@@ -1,6 +1,6 @@
 ---
 title: frameCounter
-description: frameCounter
+description: The number of frames since the beginning of the program.
 sidebar:
   label: frameCounter
   order: 1
