--- a/src/content/docs/reference/Uniforms/General/frameTime.mdx
+++ b/src/content/docs/reference/Uniforms/General/frameTime.mdx
@@ -1,7 +1,6 @@
 ---
 title: frameTime
-description: frameTime
-sidebar:
+description: The frame time of the previous frame in seconds.
   label: frameTime
   order: 1
 ---
