--- a/src/content/docs/reference/Uniforms/General/frameTimeCounter.mdx
+++ b/src/content/docs/reference/Uniforms/General/frameTimeCounter.mdx
@@ -1,6 +1,6 @@
 ---
 title: frameTimeCounter
-description: frameTimeCounter
+description: The running time of the game in seconds.
 sidebar:
   label: frameTimeCounter
   order: 1
