--- a/src/content/docs/reference/Uniforms/General/hasCeiling.mdx
+++ b/src/content/docs/reference/Uniforms/General/hasCeiling.mdx
@@ -1,6 +1,6 @@
 ---
 title: hasCeiling
-description: hasCeiling
+description: Whether the current dimension has a ceiling.
 sidebar:
   label: hasCeiling
   order: 1
