--- a/src/content/docs/reference/Uniforms/General/hasSkylight.mdx
+++ b/src/content/docs/reference/Uniforms/General/hasSkylight.mdx
@@ -1,6 +1,6 @@
 ---
 title: hasSkylight
-description: hasSkylight
+description: Whether the current dimension has a sky and sky lighting.
 sidebar:
   label: hasSkylight
   order: 1
