--- a/src/content/docs/reference/Uniforms/General/heightLimit.mdx
+++ b/src/content/docs/reference/Uniforms/General/heightLimit.mdx
@@ -1,6 +1,6 @@
 ---
 title: heightLimit
-description: heightLimit
+description: The difference in height (y coordinate) between the lowest block and the highest block that can be placed in the current dimension.
 sidebar:
   label: heightLimit
   order: 1
