--- a/src/content/docs/reference/Uniforms/General/heldBlockLightValue.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldBlockLightValue.mdx
@@ -1,6 +1,6 @@
 ---
 title: heldBlockLightValue
-description: heldBlockLightValue
+description: The light strength of the item held in the player's hand, from 0-15.
 sidebar:
   label: heldBlockLightValue
   order: 1
