--- a/src/content/docs/reference/Uniforms/General/heldBlockLightValue2.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldBlockLightValue2.mdx
@@ -1,6 +1,6 @@
 ---
 title: heldBlockLightValue2
-description: heldBlockLightValue2
+description: The light strength of the item held in the player's offhand, from 0-15.
 sidebar:
   label: heldBlockLightValue2
   order: 1
