--- a/src/content/docs/reference/Uniforms/General/heldItemId.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldItemId.mdx
@@ -1,6 +1,6 @@
 ---
 title: heldItemId
-description: heldItemId
+description: The item ID of the item in the player's hand.
 sidebar:
   label: heldItemId
   order: 1
