--- a/src/content/docs/reference/Uniforms/General/heldItemId2.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldItemId2.mdx
@@ -1,6 +1,6 @@
 ---
 title: heldItemId2
-description: heldItemId2
+description: The item ID of the item in the player's offhand.
 sidebar:
   label: heldItemId2
   order: 1
