--- a/src/content/docs/reference/Uniforms/General/hideGUI.mdx
+++ b/src/content/docs/reference/Uniforms/General/hideGUI.mdx
@@ -1,6 +1,6 @@
 ---
 title: hideGUI
-description: hideGUI
+description: Whether the player's GUI is hidden.
 sidebar:
   label: hideGUI
   order: 1
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform bool hideGUI;`
 
-This value stores weather or not the gui is hidden. This value is `false` when the GUI visible and `true` when the GUI hidden (e.g. by pressing f1).
+This value stores whether or not the gui is hidden. This value is `false` when the GUI visible and `true` when the GUI hidden (e.g. by pressing f1).
