--- a/src/content/docs/reference/Uniforms/General/isEyeInWater.mdx
+++ b/src/content/docs/reference/Uniforms/General/isEyeInWater.mdx
@@ -1,6 +1,6 @@
 ---
 title: isEyeInWater
-description: isEyeInWater
+description: The current substance that the camera is in.
 sidebar:
   label: isEyeInWater
   order: 1
