--- a/src/content/docs/reference/Uniforms/General/isRightHanded.mdx
+++ b/src/content/docs/reference/Uniforms/General/isRightHanded.mdx
@@ -1,6 +1,6 @@
 ---
 title: isRightHanded
-description: isRightHanded
+description: Whether the player's main hand is the right hand.
 sidebar:
   label: isRightHanded
   order: 1
