--- a/src/content/docs/reference/Uniforms/General/isSpectator.mdx
+++ b/src/content/docs/reference/Uniforms/General/isSpectator.mdx
@@ -1,6 +1,6 @@
 ---
 title: isSpectator
-description: isSpectator
+description: Whether the player is currently in spectator mode.
 sidebar:
   label: isSpectator
   order: 1
