--- a/src/content/docs/reference/Uniforms/General/is_burning.mdx
+++ b/src/content/docs/reference/Uniforms/General/is_burning.mdx
@@ -1,6 +1,6 @@
 ---
 title: is_burning
-description: is_burning
+description: Whether the player is currently on fire.
 sidebar:
   label: is_burning
   order: 1
