--- a/src/content/docs/reference/Uniforms/General/is_hurt.mdx
+++ b/src/content/docs/reference/Uniforms/General/is_hurt.mdx
@@ -1,6 +1,6 @@
 ---
 title: is_hurt
-description: is_hurt
+description: Whether the player is currently taking damage.
 sidebar:
   label: is_hurt
   order: 1
