--- a/src/content/docs/reference/Uniforms/General/is_invisible.mdx
+++ b/src/content/docs/reference/Uniforms/General/is_invisible.mdx
@@ -1,6 +1,6 @@
 ---
 title: is_invisible
-description: is_invisible
+description: Whether the player is invisible.
 sidebar:
   label: is_invisible
   order: 1
