--- a/src/content/docs/reference/Uniforms/General/is_on_ground.mdx
+++ b/src/content/docs/reference/Uniforms/General/is_on_ground.mdx
@@ -1,6 +1,6 @@
 ---
 title: is_on_ground
-description: is_on_ground
+description: Whether the player is currently touching the ground.
 sidebar:
   label: is_on_ground
   order: 1
