--- a/src/content/docs/reference/Uniforms/General/is_sneaking.mdx
+++ b/src/content/docs/reference/Uniforms/General/is_sneaking.mdx
@@ -1,6 +1,6 @@
 ---
 title: is_sneaking
-description: is_sneaking
+description: Whether the player is currently sneaking.
 sidebar:
   label: is_sneaking
   order: 1
