--- a/src/content/docs/reference/Uniforms/General/is_sprinting.mdx
+++ b/src/content/docs/reference/Uniforms/General/is_sprinting.mdx
@@ -1,6 +1,6 @@
 ---
 title: is_sprinting
-description: is_sprinting
+description: Whether the player is currently sprinting.
 sidebar:
   label: is_sprinting
   order: 1
