--- a/src/content/docs/reference/Uniforms/General/lightningBoltPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/lightningBoltPosition.mdx
@@ -1,6 +1,6 @@
 ---
 title: lightningBoltPosition
-description: lightningBoltPosition
+description: The position of a random lightning bolt currently being rendered.
 sidebar:
   label: lightningBoltPosition
   order: 1
