--- a/src/content/docs/reference/Uniforms/General/logicalHeightLimit.mdx
+++ b/src/content/docs/reference/Uniforms/General/logicalHeightLimit.mdx
@@ -1,6 +1,6 @@
 ---
 title: logicalHeightLimit
-description: logicalHeightLimit
+description: The logical height of the current dimension.
 sidebar:
   label: logicalHeightLimit
   order: 1
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform int logicalHeightLimit;`
 
-This value stores the logical height of the current dimension, which refers to the maximum height to which chorus fruits and nether portals can bring players within the dimension. More information can be found in the [Minecraft Wiki](https://minecraft.wiki/w/Dimension_type) under "logical_height".
+This value stores the logical height of the current dimension, which refers to the maximum height to which chorus fruits can grow and that nether portals can bring players within the dimension. More information can be found in the [Minecraft Wiki](https://minecraft.wiki/w/Dimension_type) under "logical_height".
