--- a/src/content/docs/reference/Uniforms/General/maxPlayerAir.mdx
+++ b/src/content/docs/reference/Uniforms/General/maxPlayerAir.mdx
@@ -1,6 +1,6 @@
 ---
 title: maxPlayerAir
-description: maxPlayerAir
+description: The maximum player air when underwater.
 sidebar:
   label: maxPlayerAir
   order: 1
