--- a/src/content/docs/reference/Uniforms/General/maxPlayerArmor.mdx
+++ b/src/content/docs/reference/Uniforms/General/maxPlayerArmor.mdx
@@ -1,6 +1,6 @@
 ---
 title: maxPlayerArmour
-description: maxPlayerArmour
+description: The maximum player armor value.
 sidebar:
   label: maxPlayerArmour
   order: 1
