--- a/src/content/docs/reference/Uniforms/General/maxPlayerHealth.mdx
+++ b/src/content/docs/reference/Uniforms/General/maxPlayerHealth.mdx
@@ -1,6 +1,6 @@
 ---
 title: maxPlayerHealth
-description: maxPlayerHealth
+description: The maximum player health value.
 sidebar:
   label: maxPlayerHealth
   order: 1
