--- a/src/content/docs/reference/Uniforms/General/maxPlayerHunger.mdx
+++ b/src/content/docs/reference/Uniforms/General/maxPlayerHunger.mdx
@@ -1,6 +1,6 @@
 ---
 title: maxPlayerHunger
-description: maxPlayerHunger
+description: The maximum player hunger value.
 sidebar:
   label: maxPlayerHunger
   order: 1
