--- a/src/content/docs/reference/Uniforms/General/moonPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/moonPosition.mdx
@@ -1,6 +1,6 @@
 ---
 title: moonPosition
-description: moonPosition
+description: The position of the moon in view space.
 sidebar:
   label: moonPosition
   order: 1
