--- a/src/content/docs/reference/Uniforms/General/nightVision.mdx
+++ b/src/content/docs/reference/Uniforms/General/nightVision.mdx
@@ -1,6 +1,6 @@
 ---
 title: nightVision
-description: nightVision
+description: The night vision effect as a multiplier from 0 to 1.
 sidebar:
   label: nightVision
   order: 1
