--- a/src/content/docs/reference/Uniforms/General/playerBodyVector.mdx
+++ b/src/content/docs/reference/Uniforms/General/playerBodyVector.mdx
@@ -1,6 +1,6 @@
 ---
 title: playerBodyVector
-description: playerBodyVector
+description: The world aligned direction the player model's body is facing (broken, equivalent to playerLookVector).
 sidebar:
   label: playerBodyVector
   order: 1
