--- a/src/content/docs/reference/Uniforms/General/playerLookVector.mdx
+++ b/src/content/docs/reference/Uniforms/General/playerLookVector.mdx
@@ -1,6 +1,6 @@
 ---
 title: playerLookVector
-description: playerLookVector
+description: The world aligned direction the player model's head is facing.
 sidebar:
   label: playerLookVector
   order: 1
