--- a/src/content/docs/reference/Uniforms/General/previousCameraPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/previousCameraPosition.mdx
@@ -1,6 +1,6 @@
 ---
 title: previousCameraPosition
-description: previousCameraPosition
+description: The value of cameraPosition from the previous frame.
 sidebar:
   label: previousCameraPosition
   order: 1
