--- a/src/content/docs/reference/Uniforms/General/previousCameraPositionFract.mdx
+++ b/src/content/docs/reference/Uniforms/General/previousCameraPositionFract.mdx
@@ -1,6 +1,6 @@
 ---
 title: previousCameraPositionFract
-description: previousCameraPositionFract
+description: The value of cameraPositionFract from the previous frame.
 sidebar:
   label: previousCameraPositionFract
   order: 1
