--- a/src/content/docs/reference/Uniforms/General/previousCameraPositionInt.mdx
+++ b/src/content/docs/reference/Uniforms/General/previousCameraPositionInt.mdx
@@ -1,6 +1,6 @@
 ---
 title: previousCameraPositionInt
-description: previousCameraPositionInt
+description: The value of cameraPositionInt from the previous frame.
 sidebar:
   label: previousCameraPositionInt
   order: 1
