--- a/src/content/docs/reference/Uniforms/General/rainStrength.mdx
+++ b/src/content/docs/reference/Uniforms/General/rainStrength.mdx
@@ -1,6 +1,6 @@
 ---
 title: rainStrength
-description: rainStrength
+description: The current strength of rain.
 sidebar:
   label: rainStrength
   order: 1
