--- a/src/content/docs/reference/Uniforms/General/rainfall.mdx
+++ b/src/content/docs/reference/Uniforms/General/rainfall.mdx
@@ -1,6 +1,6 @@
 ---
 title: rainfall
-description: rainfall
+description: The rainfall property of the current biome as defined by Minecraft internally.
 sidebar:
   label: rainfall
   order: 1
