--- a/src/content/docs/reference/Uniforms/General/relativeEyePosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/relativeEyePosition.mdx
@@ -1,6 +1,6 @@
 ---
 title: relativeEyePosition
-description: relativeEyePosition
+description: The world space offset from the player model's head position to the camera's position.
 sidebar:
   label: relativeEyePosition
   order: 1
