--- a/src/content/docs/reference/Uniforms/General/renderStage.mdx
+++ b/src/content/docs/reference/Uniforms/General/renderStage.mdx
@@ -1,6 +1,6 @@
 ---
 title: renderStage
-description: renderStage
+description: The render stage of the current geometry.
 sidebar:
   label: renderStage
   order: 1
