--- a/src/content/docs/reference/Uniforms/General/screenBrightness.mdx
+++ b/src/content/docs/reference/Uniforms/General/screenBrightness.mdx
@@ -1,6 +1,6 @@
 ---
 title: screenBrightness
-description: screenBrightness
+description: The screen brightness as set by the user in the video settings.
 sidebar:
   label: screenBrightness
   order: 1
