--- a/src/content/docs/reference/Uniforms/General/shadowAngle.mdx
+++ b/src/content/docs/reference/Uniforms/General/shadowAngle.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowAngle
-description: shadowAngle
+description: The angle of the moon or sun (whichever is higher above the player).
 sidebar:
   label: shadowAngle
   order: 1
