--- a/src/content/docs/reference/Uniforms/General/shadowLightPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/shadowLightPosition.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowLightPosition
-description: shadowLightPosition
+description: The position of the moon or sun (whichever is higher above the player) in view space.
 sidebar:
   label: shadowLightPosition
   order: 1
