--- a/src/content/docs/reference/Uniforms/General/skyColor.mdx
+++ b/src/content/docs/reference/Uniforms/General/skyColor.mdx
@@ -1,6 +1,6 @@
 ---
 title: skyColor
-description: skyColor
+description: The upper sky color used by the vanilla game for sky rendering.
 sidebar:
   label: skyColor
   order: 1
