--- a/src/content/docs/reference/Uniforms/General/sunAngle.mdx
+++ b/src/content/docs/reference/Uniforms/General/sunAngle.mdx
@@ -1,6 +1,6 @@
 ---
 title: sunAngle
-description: sunAngle
+description: The angle of the sun within the complete day-night cycle.
 sidebar:
   label: sunAngle
   order: 1
