--- a/src/content/docs/reference/Uniforms/General/sunPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/sunPosition.mdx
@@ -1,6 +1,6 @@
 ---
 title: sunPosition
-description: sunPosition
+description: The position of the sun in view space.
 sidebar:
   label: sunPosition
   order: 1
