--- a/src/content/docs/reference/Uniforms/General/temperature.mdx
+++ b/src/content/docs/reference/Uniforms/General/temperature.mdx
@@ -1,6 +1,6 @@
 ---
 title: temperature
-description: temperature
+description: The temperature property of the current biome as defined by Minecraft internally.
 sidebar:
   label: temperature
   order: 1
