--- a/src/content/docs/reference/Uniforms/General/thunderStrength.mdx
+++ b/src/content/docs/reference/Uniforms/General/thunderStrength.mdx
@@ -1,6 +1,6 @@
 ---
 title: thunderStrength
-description: thunderStrength
+description: The current strength of thunder.
 sidebar:
   label: thunderStrength
   order: 1
