--- a/src/content/docs/reference/Uniforms/General/upPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/upPosition.mdx
@@ -1,6 +1,6 @@
 ---
 title: upPosition
-description: upPosition
+description: The world space up vector, converted to view space.
 sidebar:
   label: upPosition
   order: 1
