--- a/src/content/docs/reference/Uniforms/General/viewHeight.mdx
+++ b/src/content/docs/reference/Uniforms/General/viewHeight.mdx
@@ -1,6 +1,6 @@
 ---
 title: viewHeight
-description: viewHeight
+description: The height of the game window in pixels/fragments.
 sidebar:
   label: viewHeight
   order: 1
