--- a/src/content/docs/reference/Uniforms/General/viewWidth.mdx
+++ b/src/content/docs/reference/Uniforms/General/viewWidth.mdx
@@ -1,6 +1,6 @@
 ---
 title: viewWidth
-description: viewWidth
+description: The width of the game window in pixels/fragments.
 sidebar:
   label: viewWidth
   order: 1
