--- a/src/content/docs/reference/Uniforms/General/wetness.mdx
+++ b/src/content/docs/reference/Uniforms/General/wetness.mdx
@@ -1,6 +1,6 @@
 ---
 title: wetness
-description: wetness
+description: Equivalent to rainStrength, but smoothed over time.
 sidebar:
   label: wetness
   order: 1
