--- a/src/content/docs/reference/Uniforms/General/worldDay.mdx
+++ b/src/content/docs/reference/Uniforms/General/worldDay.mdx
@@ -1,6 +1,6 @@
 ---
 title: wordDay
-description: worldDay
+description: The amount of in-game days that have passed since the beginning of the world.
 sidebar:
   label: worldDay
   order: 1
