--- a/src/content/docs/reference/Uniforms/General/worldTime.mdx
+++ b/src/content/docs/reference/Uniforms/General/worldTime.mdx
@@ -1,6 +1,6 @@
 ---
 title: worldTime
-description: worldTime
+description: The world time within the current day.
 sidebar:
   label: worldTime
   order: 1
