--- a/src/content/docs/reference/Uniforms/General/eyeAltitude.mdx
+++ b/src/content/docs/reference/Uniforms/General/eyeAltitude.mdx
@@ -1,7 +1,7 @@
 ---
 title: eyeAltitude
 description: eyeAltitude
-sidebar:
+sidebar: The altitude of the player in blocks.
   label: eyeAltitude
   order: 1
 ---
