add descriptions to projection matrices

--- a/src/content/docs/reference/Uniforms/Matrices/gbufferModelView.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/gbufferModelView.mdx
@@ -1,6 +1,6 @@
 ---
 title: gbufferModelView
-description: gbufferModelView
+description: Transforms coordinates from player space to view/eye space.
 sidebar:
   label: gbufferModelView
   order: 1
