--- a/src/content/docs/reference/Uniforms/Matrices/gbufferPreviousModelView.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/gbufferPreviousModelView.mdx
@@ -1,6 +1,6 @@
 ---
 title: gbufferPreviousModelView
-description: gbufferPreviousModelView
+description: The value of gbufferModelView from the previous frame.
 sidebar:
   label: gbufferPreviousModelView
   order: 1
