--- a/src/content/docs/reference/Uniforms/Matrices/gbufferPreviousProjection.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/gbufferPreviousProjection.mdx
@@ -1,6 +1,6 @@
 ---
 title: gbufferPreviousProjection
-description: gbufferPreviousProjection
+description: The value of gbufferProjection from the previous frame.
 sidebar:
   label: gbufferPreviousProjection
   order: 1
