--- a/src/content/docs/reference/Uniforms/Matrices/gbufferProjectionInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/gbufferProjectionInverse.mdx
@@ -1,6 +1,6 @@
 ---
 title: gbufferProjectionInverse
-description: gbufferProjectionInverse
+description: Projects from clip space to view/eye space.
 sidebar:
   label: gbufferProjectionInverse
   order: 1
