--- a/src/content/docs/reference/Uniforms/Matrices/modelViewMatrix.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/modelViewMatrix.mdx
@@ -1,6 +1,6 @@
 ---
 title: modelViewMatrix
-description: modelViewMatrix
+description: Transforms coordinates from model/local space to view/eye space.
 sidebar:
   label: modelViewMatrix
   order: 1
