--- a/src/content/docs/reference/Uniforms/Matrices/modelViewMatrixInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/modelViewMatrixInverse.mdx
@@ -1,6 +1,6 @@
 ---
 title: modelViewMatrixInverse
-description: modelViewMatrixInverse
+description: Transforms coordinates from view/eye space to model/local space.
 sidebar:
   label: modelViewMatrixInverse
   order: 1
