--- a/src/content/docs/reference/Uniforms/Matrices/normalMatrix.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/normalMatrix.mdx
@@ -1,6 +1,6 @@
 ---
 title: normalMatrix
-description: normalMatrix
+description: Matrix to transform a model space normal vector to view space.
 sidebar:
   label: normalMatrix
   order: 1
