--- a/src/content/docs/reference/Uniforms/Matrices/projectionMatrix.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/projectionMatrix.mdx
@@ -1,6 +1,6 @@
 ---
 title: projectionMatrix
-description: projectionMatrix
+description: Transforms coordinates from view/eye space to clip space.
 sidebar:
   label: projectionMatrix
   order: 1
