--- a/src/content/docs/reference/Uniforms/Matrices/projectionMatrixInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/projectionMatrixInverse.mdx
@@ -1,6 +1,6 @@
 ---
 title: projectionMatrixInverse
-description: projectionMatrixInverse
+description: Transforms coordinates from clip space to view/eye space.
 sidebar:
   label: projectionMatrixInverse
   order: 1
