--- a/src/content/docs/reference/Uniforms/Matrices/shadowModelView.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/shadowModelView.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowModelView
-description: shadowModelView
+description: Transforms from player space to 'shadow view space'.
 sidebar:
   label: shadowModelView
   order: 1
