--- a/src/content/docs/reference/Uniforms/Matrices/shadowModelViewInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/shadowModelViewInverse.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowModelViewInverse
-description: shadowModelViewInverse
+description: Transforms from 'shadow view space' to player space.
 sidebar:
   label: shadowModelViewInverse
   order: 1
