--- a/src/content/docs/reference/Uniforms/Matrices/shadowProjection.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/shadowProjection.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowProjection
-description: shadowProjection
+description: Projects from 'shadow view space' to 'shadow clip space'.
 sidebar:
   label: shadowProjection
   order: 1
