--- a/src/content/docs/reference/Uniforms/Matrices/shadowProjectionInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/shadowProjectionInverse.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowProjectionInverse
-description: shadowProjectionInverse
+description: Projects from 'shadow clip space' to 'shadow view space'.
 sidebar:
   label: shadowProjectionInverse
   order: 1
