--- a/src/content/docs/reference/Uniforms/Matrices/textureMatrix.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/textureMatrix.mdx
@@ -1,6 +1,6 @@
 ---
 title: textureMatrix
-description: textureMatrix
+description: Transforms texture coordinates.
 sidebar:
   label: textureMatrix
   order: 1
