--- a/src/content/docs/reference/Uniforms/Matrices/gbufferModelViewInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/gbufferModelViewInverse.mdx
@@ -1,6 +1,6 @@
 ---
 title: gbufferModelViewInverse
-description: gbufferModelViewInverse
+description: Transforms coordinates from view/eye space to player space.
 sidebar:
   label: gbufferModelViewInverse
   order: 1
