--- a/src/content/docs/reference/Uniforms/Matrices/gbufferProjection.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/gbufferProjection.mdx
@@ -1,6 +1,6 @@
 ---
 title: gbufferProjection
-description: gbufferProjection
+description: Projects from view/eye space to clip space.
 sidebar:
   label: gbufferProjection
   order: 1
